Fixed alignment sort of

--- a/cssAssignment1.css
+++ b/cssAssignment1.css
@@ -64,20 +64,19 @@ html, body {
 }
 
 .About_Me_Wrapper h2{
-    text-indent: 46.5%;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .About_Me_Wrapper img{
     padding: 20px;
     position: relative;
-    left: 35%;
+    float: left;
+    left: 20%;
 }
 
 .About_Me_Main ul {
     margin: 0;
-    position: absolute;
-    left: 47%;
     bottom: 110%;
     list-style-type: disc;
 }
@@ -91,8 +90,9 @@ html, body {
     position: relative;
     border: 1px rgba(128, 128, 128, 0) dashed;
     border-radius: 10px;
-    width: 52%;
-    left: 27%;
+    width: 70%;
+    margin: 0 auto;
+    clear: both;
 }
 
 .About_Me_Body h3{
